[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Themes/General/Popup.tres" type="Theme" id=1]
[ext_resource path="res://src/Scenes/Playlists/Options/TempPlaylistOptions.gd" type="Script" id=2]

[node name="TempPlaylistOptions" type="PanelContainer"]
margin_right = 170.0
margin_bottom = 138.0
rect_min_size = Vector2( 170, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 169.0
margin_bottom = 137.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="OptionVBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 158.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )

[node name="SetPlaylistCover" type="Button" parent="MarginContainer/OptionVBox"]
margin_right = 148.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Set Playlist Cover"

[node name="TagPlaylist" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 27.0
margin_right = 148.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Tag Playlist"

[node name="Export" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 54.0
margin_right = 148.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Export"

[node name="Close" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 81.0
margin_right = 148.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Close"
